goit-markup-hw-01-02

--- a/index.html
+++ b/index.html
@@ -1,50 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>WebStudio</title>
   </head>
   <body>
     <header class="header">
-      <div class="header-container">
-        <nav class="header-menu">
-          <a href="" class="header-logo">
-            <h3>WebStudio</h3>
-          </a>
-
-          <ul class="header-menu-list">
-            <li class="header-menu-item">
-              <a href="" class="header-menu-link">Студія</a>
-            </li>
-            <li class="header-menu-item">
-              <a href="" class="header-menu-link">Портфоліо</a>
-            </li>
-            <li class="header-menu-item">
-              <a href="" class="header-menu-link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
-        <a class="header-email" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <nav class="header-menu">
+        <a href="" class="header-logo">
+          <h3>WebStudio</h3>
+        </a>
+        <ul class="header-menu-list">
+          <li class="header-menu-item">
+            <a href="" class="header-menu-link">Студія</a>
+          </li>
+          <li class="header-menu-item">
+            <a href="" class="header-menu-link">Портфоліо</a>
+          </li>
+          <li class="header-menu-item">
+            <a href="" class="header-menu-link">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header-email" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main class="main">
       <section class="main-container">
-        <div class="main-topcontainer">
-          <bg class="main-topcontainer-back-ground"></bg>
-          <div class="main-topcontainer-advertising-slogan"></div>
-          <h1>Ефективні рішення для вашого бізнесу</h1>
-        </div>
-        <button type="main-topcontainer-button">
+        <bg class="main-topcontainer-back-ground"></bg>
+        <div class="main-topcontainer-advertising-slogan"></div>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">
           <p class="main-topcontainer-button-text">Замовити послугу</p>
           <bg class="main-topcontainer-button-background"></bg>
         </button>
       </section>
-      <div class="main-features">
+      <section class="main-features">
         <div class="main-feature-1">
           <p class="main-feature-1-title">УВАГА ДО ДЕТАЛЕЙ</p>
           <p class="main-feature-1-text">
@@ -73,27 +68,27 @@
             планових <br />завдань.
           </p>
         </div>
-      </div>
+      </section>
       <div class="main-services">
         <h2 class="main-services-title">Чим ми займаємося</h2>
         <img
           class="main-services-image-1"
-          src="/GoIT/GOIT. Home Work/images/img1.jpg"
-          alt="typing-in-night"
+          src="./images/coding.jpg"
+          alt="coding"
           width="370"
           height="294"
         />
         <img
           class="main-services-image-2"
-          src="/GoIT/GOIT. Home Work/images/img2.jpg"
-          alt="typing-in-day"
+          src="./images/mobile-and-laptop.jpg"
+          alt="mobile-and-laptop"
           width="370"
           height="294"
         />
         <img
           class="main-services-image-3"
-          src="/GoIT/GOIT. Home Work/images/img3.jpg"
-          alt="typing-in-morning"
+          src="./images/ipad.jpg"
+          alt="ipad"
           width="370"
           height="294"
         />
@@ -104,7 +99,7 @@
           <bg class="main-team-foto-container">
             <bg class="main-team-foto-container-1-backgroung">
               <img
-                src="/GoIT/GOIT. Home Work/images/product_Designer.jpg"
+                src="./images/product_Designer-2.jpg"
                 alt="foto-product-designer"
                 width="270"
                 height="260"
@@ -114,7 +109,7 @@
             </bg>
             <bg class="main-team-foto-container-2-backgroung">
               <img
-                src="/GoIT/GOIT. Home Work/images/frontend_developer.jpg"
+                src="./images/frontend_developer-2.jpg"
                 alt="foto-frontend-developer"
                 width="270"
                 height="260"
@@ -124,7 +119,7 @@
             </bg>
             <bg class="main-team-foto-container-3-backgroung">
               <img
-                src="/GoIT/GOIT. Home Work/images/marketing.jpg"
+                src="./images/marketing-2.jpg"
                 alt="foto-marketing"
                 width="270"
                 height="260"
@@ -134,7 +129,7 @@
             </bg>
             <bg class="main-team-foto-container-4-backgroung">
               <img
-                src="/GoIT/GOIT. Home Work/images/ui_designer.jpg"
+                src="./images/product_Designer-2.jpg"
                 alt="foto-ui-designer"
                 width="270"
                 height="260"
@@ -142,7 +137,6 @@
               <p class="main-team-name-surname-4" ;>Михайло Єрмаков</p>
               <p class="main-team-name-position-4">UI Designer</p>
             </bg>
-            <img
           </bg>
         </bg>
       </div>
@@ -153,14 +147,14 @@
         <h3>WebStudio</h3>
       </a>
       <div class="footer-contacts-container">
-        <p class="footer-contacts-adress">м. Київ, пр-т Лесі Українки, 26</p>
-        <p>
-          <a class="footer-email" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+        <address class="footer-contacts-adress">
+          м. Київ, пр-т Лесі Українки, 26
+        </address>
+        <p class="footer-email">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </p>
-        <p>
-          <a class="footer-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+        <p class="footer-phone">
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
         </p>
       </div>
     </footer>
