goit-markup-hw-01-03

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
   </head>
   <body>
@@ -24,48 +24,42 @@
           </li>
         </ul>
       </nav>
-      <a class="header-email" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
+      <a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main class="main">
       <section class="main-container">
-        <bg class="main-topcontainer-back-ground"></bg>
+        <div class="main-topcontainer-back-ground"></div>
         <div class="main-topcontainer-advertising-slogan"></div>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">
-          <p class="main-topcontainer-button-text">Замовити послугу</p>
-          <bg class="main-topcontainer-button-background"></bg>
-        </button>
+        <div class="main-topcontainer-button-background">
+          <button type="button">Замовити послугу</button>
+        </div>
       </section>
       <section class="main-features">
         <div class="main-feature-1">
           <p class="main-feature-1-title">УВАГА ДО ДЕТАЛЕЙ</p>
           <p class="main-feature-1-text">
-            Ідейні міркування, і навіть початок <br />повсякденної роботи з
-            формування <br />позиції.
+            Ідейні міркування, і навіть початок <br />повсякденної роботи з формування
+            <br />позиції.
           </p>
         </div>
         <div class="main-feature-2">
           <p class="main-feature-2-title">ПУНКТУАЛЬНІСТЬ</p>
           <p class="main-feature-2-text">
-            Завдання організації, особливо рамки <br />і місце навчання кадрів
-            тягне у себе.
+            Завдання організації, особливо рамки <br />і місце навчання кадрів тягне у себе.
           </p>
         </div>
         <div class="main-feature-3">
           <p class="main-feature-3-title">ПЛАНУВАННЯ</p>
           <p class="main-feature-3-text">
-            Так само консультація з широким <br />активом значною мірою
-            зумовлює.
+            Так само консультація з широким <br />активом значною мірою зумовлює.
           </p>
         </div>
         <div class="main-feature-4">
           <p class="main-feature-4-title">СУЧАСНІ ТЕХНОЛОГІЇ</p>
           <p class="main-feature-4-text">
-            Значимість цих проблем настільки <br />очевидна, що реалізація
-            планових <br />завдань.
+            Значимість цих проблем настільки <br />очевидна, що реалізація планових <br />завдань.
           </p>
         </div>
       </section>
@@ -94,7 +88,7 @@
         />
       </div>
       <div class="main-team">
-        <bg class="main-team-background">
+        <section class="main-team-background">
           <h2 class="main-team-title">Наша команда</h2>
           <bg class="main-team-foto-container">
             <bg class="main-team-foto-container-1-backgroung">
@@ -114,17 +108,12 @@
                 width="270"
                 height="260"
               />
-              <p class="main-team-name-surname-2" ;>Ольга Рєпіна</p>
+              <p class="main-team-name-surname-2">Ольга Рєпіна</p>
               <p class="main-team-name-position-2">Frontend Developer</p>
             </bg>
             <bg class="main-team-foto-container-3-backgroung">
-              <img
-                src="./images/marketing-2.jpg"
-                alt="foto-marketing"
-                width="270"
-                height="260"
-              />
-              <p class="main-team-name-surname-3" ;>Микола Тарасов</p>
+              <img src="./images/marketing-2.jpg" alt="foto-marketing" width="270" height="260" />
+              <p class="main-team-name-surname-3">Микола Тарасов</p>
               <p class="main-team-name-position-3">Marketing</p>
             </bg>
             <bg class="main-team-foto-container-4-backgroung">
@@ -134,11 +123,11 @@
                 width="270"
                 height="260"
               />
-              <p class="main-team-name-surname-4" ;>Михайло Єрмаков</p>
+              <p class="main-team-name-surname-4">Михайло Єрмаков</p>
               <p class="main-team-name-position-4">UI Designer</p>
             </bg>
           </bg>
-        </bg>
+        </section>
       </div>
     </main>
     <footer class="footer">
@@ -147,9 +136,7 @@
         <h3>WebStudio</h3>
       </a>
       <div class="footer-contacts-container">
-        <address class="footer-contacts-adress">
-          м. Київ, пр-т Лесі Українки, 26
-        </address>
+        <address class="footer-contacts-adress">м. Київ, пр-т Лесі Українки, 26</address>
         <p class="footer-email">
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </p>
