--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,9 +9,7 @@
   <body>
     <header class="header">
       <nav class="header-menu">
-        <a href="" class="header-logo">
-          <h3>WebStudio</h3>
-        </a>
+        <a href="" class="header-logo">WebStudio</a>
         <ul class="header-menu-list">
           <li class="header-menu-item">
             <a href="" class="header-menu-link">Студія</a>
@@ -24,126 +22,129 @@
           </li>
         </ul>
       </nav>
-      <a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main class="main">
       <section class="main-container">
-        <div class="main-topcontainer-back-ground"></div>
-        <div class="main-topcontainer-advertising-slogan"></div>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <div class="main-topcontainer-button-background">
-          <button type="button">Замовити послугу</button>
-        </div>
+        <button type="button">Замовити послугу</button>
       </section>
       <section class="main-features">
-        <div class="main-feature-1">
-          <p class="main-feature-1-title">УВАГА ДО ДЕТАЛЕЙ</p>
-          <p class="main-feature-1-text">
-            Ідейні міркування, і навіть початок <br />повсякденної роботи з формування
-            <br />позиції.
-          </p>
-        </div>
-        <div class="main-feature-2">
-          <p class="main-feature-2-title">ПУНКТУАЛЬНІСТЬ</p>
-          <p class="main-feature-2-text">
-            Завдання організації, особливо рамки <br />і місце навчання кадрів тягне у себе.
-          </p>
-        </div>
-        <div class="main-feature-3">
-          <p class="main-feature-3-title">ПЛАНУВАННЯ</p>
-          <p class="main-feature-3-text">
-            Так само консультація з широким <br />активом значною мірою зумовлює.
-          </p>
-        </div>
-        <div class="main-feature-4">
-          <p class="main-feature-4-title">СУЧАСНІ ТЕХНОЛОГІЇ</p>
-          <p class="main-feature-4-text">
-            Значимість цих проблем настільки <br />очевидна, що реалізація планових <br />завдань.
-          </p>
-        </div>
+        <ul>
+          <li>
+            <h3 class="main-feature-1-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="main-feature-1-text">
+              Ідейні міркування, і навіть початок <br />повсякденної роботи з формування
+              <br />позиції.
+            </p>
+          </li>
+          <li>
+            <h3 class="main-feature-2-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="main-feature-2-text">
+              Завдання організації, особливо рамки <br />і місце навчання кадрів тягне у себе.
+            </p>
+          </li>
+          <li>
+            <h3 class="main-feature-3-title">ПЛАНУВАННЯ</h3>
+            <p class="main-feature-3-text">
+              Так само консультація з широким <br />активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3 class="main-feature-4-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="main-feature-4-text">
+              Значимість цих проблем настільки <br />очевидна, що реалізація планових <br />завдань.
+            </p>
+          </li>
+        </ul>
       </section>
-      <div class="main-services">
+      <section class="main-services">
         <h2 class="main-services-title">Чим ми займаємося</h2>
-        <img
-          class="main-services-image-1"
-          src="./images/coding.jpg"
-          alt="coding"
-          width="370"
-          height="294"
-        />
-        <img
-          class="main-services-image-2"
-          src="./images/mobile-and-laptop.jpg"
-          alt="mobile-and-laptop"
-          width="370"
-          height="294"
-        />
-        <img
-          class="main-services-image-3"
-          src="./images/ipad.jpg"
-          alt="ipad"
-          width="370"
-          height="294"
-        />
-      </div>
-      <div class="main-team">
-        <section class="main-team-background">
-          <h2 class="main-team-title">Наша команда</h2>
-          <bg class="main-team-foto-container">
-            <bg class="main-team-foto-container-1-backgroung">
-              <img
-                src="./images/product_Designer-2.jpg"
-                alt="foto-product-designer"
-                width="270"
-                height="260"
-              />
-              <p class="main-team-name-surname-1">Ігор Дем'яненко</p>
-              <p class="main-team-name-position-1">Product Designer</p>
-            </bg>
-            <bg class="main-team-foto-container-2-backgroung">
-              <img
-                src="./images/frontend_developer-2.jpg"
-                alt="foto-frontend-developer"
-                width="270"
-                height="260"
-              />
-              <p class="main-team-name-surname-2">Ольга Рєпіна</p>
-              <p class="main-team-name-position-2">Frontend Developer</p>
-            </bg>
-            <bg class="main-team-foto-container-3-backgroung">
-              <img src="./images/marketing-2.jpg" alt="foto-marketing" width="270" height="260" />
-              <p class="main-team-name-surname-3">Микола Тарасов</p>
-              <p class="main-team-name-position-3">Marketing</p>
-            </bg>
-            <bg class="main-team-foto-container-4-backgroung">
-              <img
-                src="./images/product_Designer-2.jpg"
-                alt="foto-ui-designer"
-                width="270"
-                height="260"
-              />
-              <p class="main-team-name-surname-4">Михайло Єрмаков</p>
-              <p class="main-team-name-position-4">UI Designer</p>
-            </bg>
-          </bg>
-        </section>
-      </div>
+        <ul>
+          <li>
+            <img
+              class="main-services-image-1"
+              src="./images/coding.jpg"
+              alt="coding"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              class="main-services-image-2"
+              src="./images/mobile-and-laptop.jpg"
+              alt="mobile-and-laptop"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              class="main-services-image-3"
+              src="./images/ipad.jpg"
+              alt="ipad"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <section class="main-team-background">
+        <h2 class="main-team-title">Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/product_Designer-2.jpg"
+              alt="foto-product-designer"
+              width="270"
+              height="260"
+            />
+            <h3 class="main-team-name-surname-1">Ігор Дем'яненко</h3>
+            <p class="main-team-name-position-1">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/frontend_developer-2.jpg"
+              alt="foto-frontend-developer"
+              width="270"
+              height="260"
+            />
+            <h3 class="main-team-name-surname-2">Ольга Рєпіна</h3>
+            <p class="main-team-name-position-2">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/marketing-2.jpg" alt="foto-marketing" width="270" height="260" />
+            <h3 class="main-team-name-surname-3">Микола Тарасов</h3>
+            <p class="main-team-name-position-3">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/product_Designer-2.jpg"
+              alt="foto-ui-designer"
+              width="270"
+              height="260"
+            />
+          </li>
+        </ul>
+        <h3 class="main-team-name-surname-4">Михайло Єрмаков</h3>
+        <p class="main-team-name-position-4">UI Designer</p>
+      </section>
     </main>
     <footer class="footer">
-      <div class="footer-background-container"></div>
-      <a href="" class="footer-logo">
-        <h3>WebStudio</h3>
-      </a>
-      <div class="footer-contacts-container">
-        <address class="footer-contacts-adress">м. Київ, пр-т Лесі Українки, 26</address>
-        <p class="footer-email">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </p>
-        <p class="footer-phone">
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </p>
-      </div>
+      <a href="" class="footer-logo"> WebStudio </a>
+      <address class="footer-contacts-adress">
+        <ul>
+          <li>
+            <a href="">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
