--- a/index.html
+++ b/index.html
@@ -139,7 +139,12 @@
       <address class="footer-contacts-adress">
         <ul>
           <li>
-            <a href="">м. Київ, пр-т Лесі Українки, 26</a>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
           </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
